available cars implemented

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -8,12 +8,14 @@
         </p>
       </div>
       <button class="discover-btn">
-        <a href="#">Book a test drive</a><span><i class="fal fa-arrow-circle-right"></i></span>
+        <a [routerLink]="['/bookings']">Book a test drive</a><span><i class="fal fa-arrow-circle-right"></i></span>
       </button>
     </div>
     <div class="right-sec">
       <div class="my-car">
-        <div><img src="https://crdms.images.consumerreports.org/c_lfill,w_720,q_auto,f_auto/prod/cars/cr/model-years/12013-2021-bmw-4-series" alt=""></div>
+        <div><img
+            src="https://crdms.images.consumerreports.org/c_lfill,w_720,q_auto,f_auto/prod/cars/cr/model-years/12013-2021-bmw-4-series"
+            alt=""></div>
       </div>
     </div>
   </div>
