--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -5,8 +5,8 @@
     </div>
     <div class="menu">
       <ul>
-        <li><a href="">Cars</a></li>
-        <li><a href="">Bookings</a></li>
+        <li><a [routerLink]="['/cars']">Cars</a></li>
+        <li><a [routerLink]="['/bookings']">Bookings</a></li>
         <li><a href="">Login</a></li>
       </ul>
     </div>
