added login components

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
       <ul>
         <li><a [routerLink]="['/cars']">Cars</a></li>
         <li><a [routerLink]="['/bookings']">Bookings</a></li>
-        <li><a href="">Login</a></li>
+        <li><a [routerLink]="['/login']">Login</a></li>
       </ul>
     </div>
     <div class="social-media">
