--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
         </p>
       </div>
       <button class="discover-btn">
-        <a [routerLink]="['/bookings']">Book a test drive</a><span><i class="fal fa-arrow-circle-right"></i></span>
+        <a [routerLink]="['/book']">Book a test drive</a><span><i class="fal fa-arrow-circle-right"></i></span>
       </button>
     </div>
     <div class="right-sec">
