--- a/client/src/app/components/bookingform/bookingform.component.html
+++ b/client/src/app/components/bookingform/bookingform.component.html
@@ -83,7 +83,7 @@
             formControlName="booking_date" />
         </li>
         <li>
-          <button type="submit" (click)=submit()>Submit</button>
+          <button type="button" (click)=submit()>Submit</button>
         </li>
       </ul>
     </form>
