--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -3,8 +3,7 @@
     <div class="left-sec">
       <div class="content">
         <h2><span>Book </span><br>a Drive<span>.</span></h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id consectetur explicabo enim dolorem, dolor vero
-          qui suscipit rerum natus minus quaerat aperiam sapiente eos.
+        <p>A car is a big investment, try out your ride before you make the big leap. Sometimes however, you just want to feel what it would be like to drive your dream car. Whatever it is...just <span>BOOK-IT</span>
         </p>
       </div>
       <button class="discover-btn">
