--- a/client/src/app/components/home/home.component.scss
+++ b/client/src/app/components/home/home.component.scss
@@ -32,6 +32,10 @@
 .hero .row .left-sec h2 span {
   color: #d43242;
 }
+.hero .row .left-sec span {
+  color: #d43242;
+  font-weight: 700;
+}
 
 .hero .row .left-sec p {
   margin: 20px 0;
