--- a/client/src/app/components/cars/cars.component.html
+++ b/client/src/app/components/cars/cars.component.html
@@ -3,17 +3,15 @@
     <div class="left-sec">
       <div class="content">
         <h2><span>Available </span><br>Rides<span>.</span></h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id consectetur explicabo enim dolorem, dolor vero
-          qui suscipit rerum natus minus quaerat aperiam sapiente eos.
+        <p>Checkout our available rides, if none catch your fancy you always book a ride and you will be notified when
+          it is available.
         </p>
       </div>
     </div>
     <div class="right-sec">
       <div class="available_cars" *ngFor="let car of availableCars?.rows">
         <div class="img-container">
-          <img
-            src="{{car.vehicle_pic}}"
-            alt="">
+          <img src="{{car.vehicle_pic}}" alt="">
         </div>
         <div class="vehicle-details">
           <a>Vehicle Manufacturer: {{car.manufacturer}}</a>
